Fix the vertical alignment of the “Spoiler” title

--- a/plugins/ckeditor5-woltlab-spoiler/theme/woltlabspoiler.css
+++ b/plugins/ckeditor5-woltlab-spoiler/theme/woltlabspoiler.css
@@ -29,6 +29,7 @@
 }
 
 .ck.ck-content .ck-woltlabspoiler::before {
+  align-self: center;
   content: attr(data-label);
   color: #999;
   grid-area: label;
